dh-python (2.201609XX) UNRELEASED; urgency=medium

  * pybuild.pm:
    - enable --test-{nose,pytest,tox} if appropriate pypy-* build
      dependency is set
  * dh_python{2,3} manpage: remove "s" suffix from *-section options
    to match the actual option name and --help output (closes: 847304)

 -- Piotr Ożarowski <piotr@debian.org>  Wed, 07 Sep 2016 22:39:27 +0200

dh-python (2.20160818) unstable; urgency=medium

  [ Chris Lamb ]
  * dh_py*: do not copy build profiles into substvars (closes: 834238)
  * pybuild: log "before" and "after" commands by default (closes: 834506)

  [ Piotr Ożarowski ]
  * dh_py*: add --{depends,recommends,suggests}-section options
    Use these options if you want to translate section(s) of requires.txt
    file into Depends/Recommends/Suggests
  * Mention pydist override file names and their priority in README.PyDist

 -- Piotr Ożarowski <piotr@debian.org>  Thu, 18 Aug 2016 00:27:52 +0200

dh-python (2.20160721) unstable; urgency=medium

  * pybuild.pm: recognize ":any" build dependencies (closes: 828883)
  * Save helper's name in autogenerated maintainer scripts (closes: 827774)

 -- Piotr Ożarowski <piotr@debian.org>  Thu, 21 Jul 2016 21:56:20 +0200

dh-python (2.20160609) unstable; urgency=medium

  [ Piotr Ożarowski ]
  * pybuild's distutils build plugin: use force option at install stage to
    avoid non-deterministic shebangs (closes: 804339)
  * pybuild.pm:
    - fail with a message about missing interpreter package in
      Build-Depends if there's none (closes: 819353)
    - do not pass --dir to pybuild if it's equal to current directory
      (to make PYBUILD_DIR override possible)
  * dh_pypy: fix dpkg search template to find more pypy egg-info packages
  * dh_py*:
    - add interpreter to Depends if .so file is detected in private dir
      only if python{,3,all,3-all}-dev is in Build-Depends (closes: 811083)
    - use Build-Depends' minimum version for required libraries if other